[gd_scene load_steps=5 format=3 uid="uid://cmv4mku3qrvwb"]

[ext_resource type="Script" path="res://hud.gd" id="1_rqk85"]
[ext_resource type="FontFile" uid="uid://kscown4twdb3" path="res://fonts/Xolonium-Regular.ttf" id="1_t4dcf"]

[sub_resource type="InputEventKey" id="InputEventKey_0kt8b"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_xw0ag"]
events = [SubResource("InputEventKey_0kt8b")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_rqk85")

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 240.0
offset_bottom = 81.0
theme_override_fonts/font = ExtResource("1_t4dcf")
theme_override_font_sizes/font_size = 64
text = "0"
vertical_alignment = 1
autowrap_mode = 2

[node name="HighScoreDisplayName" type="Label" parent="."]
offset_left = 240.0
offset_top = 37.0
offset_right = 480.0
offset_bottom = 118.0
theme_override_fonts/font = ExtResource("1_t4dcf")
theme_override_font_sizes/font_size = 16
text = "High Score"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="ScoreDisplayName" type="Label" parent="."]
offset_top = 37.0
offset_right = 240.0
offset_bottom = 118.0
theme_override_fonts/font = ExtResource("1_t4dcf")
theme_override_font_sizes/font_size = 16
text = "Score"
vertical_alignment = 1
autowrap_mode = 2

[node name="HighScoreLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -240.0
offset_bottom = 81.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("1_t4dcf")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="MessageTimer" type="Timer" parent="."]

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -81.0
offset_right = 240.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_t4dcf")
theme_override_font_sizes/font_size = 64
text = "Dodge the Creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.5
offset_top = -170.0
offset_right = 111.5
offset_bottom = -84.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_t4dcf")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_xw0ag")
text = "Start"

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
